--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <form onsubmit="return false" class="parent-list pt-4 pb-4 rounded-md">
           <div class="3 pl-3.5   parentButt">
             <button class="butt pointer-events-none border border-gray-500  absolute  h-6 w-6 rounded-3xl"
-              aria-label="button"></>
+              aria-label="button"></button>
           </div>
           <!-- </label> -->
           <input maxlength="25"
@@ -102,7 +102,7 @@
           Challenge by
         </span>
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. <span
-          class="text-gray-500">Coded by</span> <a href="#">Hani</a>.
+          class="text-gray-500">Coded by</span> <a href="https://github.com/haniissa/todo-app-main">Hani</a>.
       </div>
     </div>
     <!-- Todo -->
